--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="page/index.css">
+  <link rel="stylesheet" href="./page/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Путешестия по России">
   <meta name="author" content="Карина Валяева">
   <title>Путешествия по России</title>
 </head>
-<body class="page">
+<body>
+  <div class="page">
     <header class="header page__header">
-      <img class="header__logo" src="images/header-logo.svg" alt="Лого Россия">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Лого Россия">
       <ul class="header__lang-links">
          <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
          <li><a class="header__lang-link" href="#">En</a></li>
@@ -21,7 +22,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках 
         новостей, а здесь.</p>
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Полка">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка">
           <p class="lead__caption">ваша полка &mdash; верхняя</p>
       </section>
       <section class="intro page__intro">
@@ -37,11 +38,11 @@
             по родной стране. Мы выбрали и описали некоторые интересные места, достойные 
             вашего отпуска.</p>
           <ul class="intro__list">
-            <li class="intro__list-text"><span class="intro__list-text intro__list-text_span">Часовых поясов &thinsp;</span>11</li>
-            <li class="intro__list-text"><span class="intro__list-text intro__list-text_span">Объектов природного наследия ЮНЕСКО &thinsp;</span>12</li>
-            <li class="intro__list-text"><span class="intro__list-text intro__list-text_span">Объектов культурного наследия ЮНЕСКО &thinsp;</span>16</li>
-            <li class="intro__list-text"><span class="intro__list-text intro__list-text_span">Природных заповедников &thinsp;</span>105</li>
-            <li class="intro__list-text"><span class="intro__list-text intro__list-text_span">Аэропортов &thinsp;</span>241</li>
+            <li class="intro__list-text"><span class="intro__span-accent">Часовых поясов &thinsp;</span>11</li>
+            <li class="intro__list-text"><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО &thinsp;</span>12</li>
+            <li class="intro__list-text"><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО &thinsp;</span>16</li>
+            <li class="intro__list-text"><span class="intro__span-accent">Природных заповедников &thinsp;</span>105</li>
+            <li class="intro__list-text"><span class="intro__span-accent">Аэропортов &thinsp;</span>241</li>
           </ul>
         </div>
       </section>
@@ -62,17 +63,17 @@
       <section class="places page__places">
         <article class="place">
           <h2 class="place__title">Куршская &nbsp; коса</h2>
-          <div class="place__webcite">
-            <h3 class="place__webcite-title">URL</h3>
-            <a class="place__webcite-link" href="http://park-kosa.ru">park-kosa.ru</a>
+          <div class="place__website">
+            <h3 class="place__website-title">url</h3>
+            <a class="place__website-link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__text">
-            <p class="place__paragraf">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных 
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных 
               горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн 
               Балтийского моря с другой. Уникальная природная зона 
             на краю российского анклава.</p>
-            <p class="place__paragraf">На этом Калининградская область не заканчивается. 
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. 
             Для путешественника и исследователя там же по соседству — самая западная 
             точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских 
             городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и 
@@ -81,16 +82,16 @@
         </article>
         <article class="place">
           <h2 class="place__title">Кольский</h2>
-          <div class="place__webcite">
-            <h3 class="place__webcite-title">URL</h3>
-            <a class="place__webcite-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+          <div class="place__website">
+            <h3 class="place__website-title">url</h3>
+            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
-          <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
           <div class="place__text">
-            <p class="place__paragraf">Почти весь полуостров находится за Полярным кругом. 
+            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. 
             Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, 
             прикидывающийся Баренцевым морем.</p>
-            <p class="place__paragraf">Возможно, вы смотрели Звягинцева и даже слышали 
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали 
             историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось 
             под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались 
             пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает 
@@ -99,17 +100,17 @@
         </article>
         <article class="place">
           <h2 class="place__title">Алтай</h2>
-          <div class="place__webcite">
-            <h3 class="place__webcite-title">URL</h3>
-            <a class="place__webcite-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+          <div class="place__website">
+            <h3 class="place__website-title">url</h3>
+            <a class="place__website-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
-          <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
+          <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
           <div class="place__text">
-          <p class="place__paragraf">Алтай — одно из красивейших мест в России. 
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, 
             усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, 
             сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-          <p class="place__paragraf">Климат на Алтае умеренный, поэтому ехать сюда лучше всего 
+          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего 
             летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят 
             лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы 
             — тоже обитатели Алтайского края.</p>
@@ -117,16 +118,16 @@
         </article>
         <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <div class="place__webcite">
-            <h3 class="place__webcite-title">URL</h3>
-            <a class="place__webcite-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          <div class="place__website">
+            <h3 class="place__website-title">url</h3>
+            <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
-          <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__text">
-          <p class="place__paragraf">Всем известен Байкал как крупнейшее озеро в мире. Многие 
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие 
             также знают, что это самый большой источник пресной воды и одно из красивейших 
             мест в России.</p>
-          <p class="place__paragraf">Конечно, это всё так. Но Байкал ещё идеальное место для 
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для 
             соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 
             2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -134,12 +135,12 @@
         </article>
         <article class="place">
           <h2 class="place__title">Карелия</h2>
-          <div class="place__webcite">
-            <h3 class="place__webcite-title">URL</h3>
-            <a class="place__webcite-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          <div class="place__website">
+            <h3 class="place__website-title">url</h3>
+            <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
-          <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
-          <div class="place__text"><p class="place__paragraf">Сибирь заканчивается не на Урале, а в Карелии: образующая 
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
+          <div class="place__text"><p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая 
             тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает 
             на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда 
             не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому 
@@ -150,7 +151,7 @@
         </article>
       </section>
       <section class="cover page__cover">
-        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <div class="cover__text">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы 
@@ -163,14 +164,15 @@
     <footer class="footer page__footer">
      <nav>
        <ul class="footer__links">
-         <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-         <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-         <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-         <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-         <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+         <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+         <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+         <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+         <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+         <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
        </ul>
      </nav>
      <p class="footer__author">&copy; 2020. Карина Валяева</p>
     </footer>
+  </div> 
 </body>
 </html>
