--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Карина Валяева">
   <title>Путешествия по России</title>
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header page__header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Лого Россия">
